--- a/style.css
+++ b/style.css
@@ -21,6 +21,13 @@ footer{
 	text-align: center;
     background-color: #000000;
 }
+footer a {
+    color: #8b8b8b;
+    text-decoration: none;
+}
+footer a:hover{
+    color: #fff;
+}
 nav a:hover, a, h1, h2{
     color: #141414;
 }
